# viral-utils

./: .gitignore
api/: Makefile  pyproject.toml  ruff.toml
api/migrations/: migrate.py
api/migrations/schemas/: 003_add_table_users.sql  005_add_table_videos.sql  006_add_trigger_videos_updated_at.sql  009_add_index_videos_create_time_id.sql
api/src/: config.py  exceptions.py  logging.py  main.py
api/src/douyin/: queries.py  repository.py  router.py  schemas.py  service.py
api/src/download/: exceptions.py  service.py
api/src/inpainting/: engine.py  schemas.py  service.py
api/src/inpainting/engines/: opencv.py
api/src/llm/: constants.py  exceptions.py  provider.py  service.py
api/src/llm/providers/: openai.py
api/src/ocr/: service.py
api/src/ocr/engines/: ocrmac.py
api/src/platform/: queries.py  repository.py  router.py  schemas.py
api/src/subtitle/: constants.py  service.py
api/src/system/: repository.py  router.py  schemas.py
api/src/tikhub/: client.py  constants.py  dependencies.py  exceptions.py
api/src/video/: dependencies.py  engine.py  router.py  service.py
api/tests/: test_douyin_repository.py  test_douyin_schemas.py  test_douyin_service.py  test_llm_exceptions.py  test_platform_contracts.py  test_tikhub_client.py  test_video_service.py
backend/: pyproject.toml  ruff.toml
backend/migrations/: create.py  drop.py  migrate.py
backend/migrations/schemas/: 001_add_table_systems.sql  (+8 more)
backend/src/: config.py  database.py  main.py
web/: biome.json  index.html  package.json
web/src/: App.tsx  index.css  routes.tsx
(+93 files in other folders)
